k8s/base/frontend-user.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-frontend-user
  namespace: deepface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepface-frontend-user
  template:
    metadata:
      labels:
        app: deepface-frontend-user
    spec:
      containers:
        - name: nginx
          image: deepface_frontend_user:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
