k8s/base/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepface-backend
  namespace: deepface
spec:
  selector:
    app: deepface-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
