k8s/base/frontend-admin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepface-frontend-admin
  namespace: deepface
spec:
  selector:
    app: deepface-frontend-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
