k8s/base/frontend-home.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepface-frontend-home
  namespace: deepface
spec:
  selector:
    app: deepface-frontend-home
  ports:
    - name: http
      port: 80
      targetPort: 80
